tests/errors/semantic_52/s5.src
.IPPcode21

CREATEFRAME
PUSHFRAME
DEFVAR LF@m

DEFVAR LF@m
